<resources>
    <string name="add_description">Add a Description</string>
    <string name="add_image">Please add some images</string>>
    <string name="add_hint">Add a Hint (For example: go past old tree)</string>
    <string name="app_name">Explorer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_place">Map</string>
    <string name="permission_fine_location_rationale">If you deny location permission it will be harder to set a point on a map!</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_fine_location_denied">Permission denied</string>
    <string name="permission_fine_location_neverask">We wont ask for this permission again</string>
    <string name="title_activity_location_test">LocationTestActivity</string>
    <string name="nextBtn">Next</string>
    <string name="pick_image_intent_text">Choose a photo</string>
    <string name="addHintBtn">Add a hint</string>
    <string name="hints">Hints: (Optional)</string>
    <string name="goodFor">What is this spot good for? (picknics, dates, etc)</string>
    <string name="general">General: (Required)</string>
    <string name="add_photos">Add some photos: (At least 1 required)</string>
    <string name="hint1">Add a hint: (For example: Take the path past the dead tree)</string>
    <string name="hint2">Add a hint: (For example: Turn left after passing the river)</string>
    <string name="hint3">Add a hint: (For example: go around the hill and up the stairs)</string>
    <string name="add_title">Add a title</string>
    <string name="description">Description</string>
    <string name="goodForDesc">This place is good for:</string>
    <string name="revealHint1">Unlock first hint (10 coins)</string>
    <string name="revealHint2">Unlock second hint (10 coins)</string>
    <string name="revealHint3">Unlock third hint (10 coins)</string>
    <string name="uploadedBy">Uploaded by %1$s! </string>
    <string name="start">Start Adventure!</string>
    <string name="filter">Filter places</string>
    <string name="sort">Order:</string>
    <string name="minRating">Minimum Rating</string>
    <string name="postedFrom">Show only posted from</string>
    <string name="postedTo">to</string>
    <string name="chooseDate">Choose date..</string>
    <string name="resetFilter">Reset</string>
</resources>
