<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context="com.example.daumantas.explorer.AddDescriptionFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/add_photos"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/photos"
                android:layout_marginTop="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/image1"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:background="@android:color/transparent"
                        android:maxHeight="250dp"
                        android:maxWidth="250dp"
                        android:scaleType="fitXY" />

                    <ImageButton
                        android:id="@+id/image2"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@android:color/transparent"
                        android:maxHeight="250dp"
                        android:maxWidth="250dp"
                        android:scaleType="fitXY" />

                    <ImageButton
                        android:id="@+id/image3"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginRight="10dp"
                        android:background="@android:color/transparent"
                        android:maxHeight="250dp"
                        android:maxWidth="250dp"
                        android:scaleType="fitXY" />

                </LinearLayout>
            </HorizontalScrollView>
            <TextView
                android:id="@+id/general"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/horizontalScrollView"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/general"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/general"
                android:maxLength="40"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:hint="@string/add_title"
                android:background="@drawable/text_box"
                android:ems="10"
                android:gravity="top|start" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/title"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:maxLength="300"
                android:hint="@string/add_description"
                android:background="@drawable/text_box"
                android:ems="10"
                android:gravity="top|start"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/goodFor"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/description"
                android:maxLength="120"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:hint="@string/goodFor"
                android:background="@drawable/text_box"
                android:ems="10"
                android:gravity="top|start"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/hints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/goodFor"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/hints"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <EditText
            android:id="@+id/hint1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/hints"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:hint="@string/hint1"
            android:background="@drawable/text_box"
            android:ems="10"
            android:maxLength="120"
            android:gravity="top|start"
            android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/hint2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/hint1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:hint="@string/hint2"
                android:background="@drawable/text_box"
                android:ems="10"
                android:maxLength="120"
                android:gravity="top|start"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/hint3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/hint2"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp"
                android:hint="@string/hint3"
                android:background="@drawable/text_box"
                android:ems="10"
                android:maxLength="120"
                android:gravity="top|start"
                android:inputType="textMultiLine" />


            <Button
                android:id="@+id/descriptionNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hint3"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/holo_green_light"
                android:text="@string/nextBtn" />


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
