<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.daumantas.explorer.PlaceInfoFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView2"
    android:layout_marginTop="?attr/actionBarSize"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textSize="30sp"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/photosLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/image2"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/image3"
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/rating"
                android:layout_weight="50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@android:drawable/star_on"
                android:drawableStart="@android:drawable/star_on"
                android:text=""
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/uploader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:text=""
                android:textSize="30sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View android:background="#000" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/description"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textSize="20sp" />

        <View android:background="#000" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/goodForDesc"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/goodFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textSize="20sp" />

        <View android:background="#000" android:layout_width="match_parent" android:layout_height="1px" android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btn_hint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revealHint1"/>

        <TextView
            android:id="@+id/hint1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textSize="20sp" />


        <Button
            android:id="@+id/btn_hint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revealHint2"/>

        <TextView
            android:id="@+id/hint2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_hint3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revealHint3"/>

        <TextView
            android:id="@+id/hint3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_go"
            android:layout_marginTop="30dp"
            android:background="@android:color/holo_green_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"/>

    </LinearLayout>




</ScrollView>
